--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                      I am <span>Jarno Kiimala. </span>Front-End Web Developer & Engineer.</span></h1><br>
                     
                      <div class="scene">
-                        <div class="text" id="animatedText">3D Modeling</div>
+                        <div class="text" id="animatedText">Continuous Improvement</div>
                       </div>
                     
                 <p>
@@ -124,7 +124,7 @@
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
                     <h5>Life Cycle Management | M.Eng<span> - Jyväskylä University of Applied Sciences (JAMK)</span></h5>
-                    <img src="img/jamk.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
+                    <img src="img/jamk.webp" alt="Jyväskylä University of Applied Sciences (JAMK) - Jarno Kiimala - M.Eng">
                     <p>
                         Life Cycle Management, Master's level Open University route studies 1. (START - 2025)
                     </p>
@@ -212,7 +212,7 @@
                     </div>
                     <!-- <p class="tl-duration">2018</p> -->
                     <h5>3D CAD Design & Product Development<span> - The Finnish Institute for Enterprise Management</span></h5>
-                    <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
+                    <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
@@ -251,7 +251,7 @@
                     </div>
                     <!-- <p class="tl-duration">2021</p> -->
                     <h5>WordPress & WooCommerce Design & Architecture<span> - Avartum-Institute Ltd</span></h5>
-                    <img src="img/woocommerce.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
+                    <img src="img/woocommerce.webp" alt="Faktia Ltd - Jarno Kiimala - WordPress & WooCommerce">
                     <p>
                         WordPress & WooCommerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO and Administration.
                     </p>
