--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h5>Life Cycle Management | M.Eng<span> - Jyväskylä University of Applied Sciences (JAMK)</span></h5>
                     <img src="img/jamk.webp" alt="Jyväskylä University of Applied Sciences (JAMK) - Jarno Kiimala - M.Eng">
                     <p>
-                        Life Cycle Management, Master's level Open University route studies 1. (START - 2025)
+                        Life Cycle Management, Master's level. (START - 2025)
                     </p>
                 </div>
 
