--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
             
             <div class="timeline">
 
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2023</p> -->
+                     <p class="tl-duration">2023</p> 
                     <h5>Life Cycle Management | M.Eng<span> - Jyväskylä University of Applied Sciences (JAMK)</span></h5>
                     <img src="img/jamk.webp" alt="Jyväskylä University of Applied Sciences (JAMK) - Jarno Kiimala - M.Eng">
                     <p>
                         Life Cycle Management, Master Level. (START - 2025)
                     </p>
-                </div>
+                </div> -->
 
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -206,24 +206,24 @@
                     </p>
                 </div>
 
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2018</p> -->
+                     <p class="tl-duration">2018</p> 
                     <h5>3D CAD Design & Product Development<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
-                </div>
+                </div> 
 
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2023 - 2024</p> -->
+                     <p class="tl-duration">2023 - 2024</p> 
                     <h5>Software Developer | Programming Degree<span> - Esedu Ltd</span></h5>
                     <img src="img/esedu2.webp" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
                     <p>
@@ -237,7 +237,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2021</p> -->
+                     <p class="tl-duration">2021</p> 
                     <h5>e-Commerce Design & Admin<span> - Faktia Ltd</span></h5>
                     <img src="img/myCashFlowI.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
@@ -249,7 +249,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2021</p> -->
+                     <p class="tl-duration">2021</p> 
                     <h5>WordPress & WooCommerce Design & Architecture<span> - Avartum-Institute Ltd</span></h5>
                     <img src="img/woocommerce.webp" alt="Faktia Ltd - Jarno Kiimala - WordPress & WooCommerce">
                     <p>
@@ -264,14 +264,14 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <!-- <p class="tl-duration">2017</p> -->
+                     <p class="tl-duration">2017</p> 
                     <h5>Further Technical Education to Highly Qualified<span> - Lappia-Education Ltd</span></h5>
                     <img src="img/lappia.webp" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
                     <p>
                         Continuing Professional Technical Education to Highly Qualified Individuals Tailored
                         to Meet the Needs of the Swedish and Norwegian Labor Markets.
                     </p>
-                </div> 
+                </div> -->
 
 
                 
