--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h5>The LAI Lean Academy<span> - The Massachusetts Institute of Technology (MIT)</span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
-                        Introduction to Lean Six Sigma Methods.
+                        Introduction to Lean Six Sigma Methods Online Course.
                     </p>
                 </div>
 
@@ -228,7 +228,7 @@
                     <h5>Software Developer | Programming Degree<span> - Computer Science Esedu Ltd</span></h5>
                     <img src="img/esedu2.webp" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
                     <p>
-                        HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI.
+                        HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI, Remote Team Projects.
                     </p>
                 </div>
 
