--- a/index.html
+++ b/index.html
@@ -1058,6 +1058,21 @@
 
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="img/valio.webp" alt="Jarno Kiimala - Lemmy">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Marketing Plän Study - Case Lemmy</h3>
+                        <div class="icons">
+                            <a href="https://www.youtube.com/watch?v=PfgycAOT0KI" target="_blank" class="icon">
+                                <i class="fas fa-link"></i>
+                            </a>
+                                                
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="img/knowhow.webp" alt="Jarno Kiimala - Projects: Knowledge Management">
                     </div>
                     <div class="hover-items">
