--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
+                        <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="ai">
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventor">
@@ -107,7 +108,9 @@
                         <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="adobe">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                        <div class="carousel-item" role="listitem"><img src="img/woo.webp" alt="WooCommerce">
+                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div>
                 </div></div>
 
