--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="adobe">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
-                        <div class="carousel-item" role="listitem"><img src="img/woo.webp" alt="WooCommerce">
+                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div>
@@ -923,7 +923,7 @@
 
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/woo.webp" alt="Jarno Kiimala - WordPress & WooCommerce">
+                        <img src="img/woo1.webp" alt="Jarno Kiimala - WordPress & WooCommerce">
                     </div>
                     <div class="hover-items">
                         <h3>WooCommerce Solutions</h3>
