--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       </div>
                     
                 <p>
-                    Transforming Ideas into Interactive Realities.
+                    Improving efficiency and the quality of work.
                 </p>
 
             </div>
@@ -300,7 +300,7 @@
                                 LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
-                                Industrial Production Process Operations | Raamsdonksveer, The Netherlands
+                                Industrial Production Process Operations, Preventive Maintenance (PM) | Raamsdonksveer, The Netherlands
                             </p>
                             
                         </div>
@@ -426,7 +426,7 @@
                                 Tamora Oy
                             </h4>
                             <p>
-                                Change Design Projects | Helsinki, Finland
+                                Online Change Design Projects | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                                 Unna Junná | TV | Areena | yle.fi
                             </h4>
                             <p>
-                                Rock Bohccot - 2D animation Project | Inari, Finland
+                                Rock Bohccot - After Effects 2D animation Project | Inari, Finland
                             </p>
                         </div>
                     </div>
