--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                 <a>Ijahis Idja Music Festival</a>
                             </h4>
                             <p>
-                                Video Shoot & Edit Project | Aanaar - Inari, Finland
+                                Music Video Production Project(Shoot & Edit) | Aanaar - Inari, Finland
                             </p>
                         </div>
                     </div>
