--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
                     </p>
                 </div> -->
 
-                <!--<div class="timeline-item">
+                <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                     <p class="tl-duration">2024</p> 
+                     <!--<p class="tl-duration">2024</p> -->
                     <h5>The LAI Lean Academy<span> - The Massachusetts Institute of Technology (MIT)</span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
                         Introduction to Lean Six Sigma Methods.
                     </p>
-                </div> -->
+                </div>
 
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -166,8 +166,8 @@
                     <h5>Industrial Engineering and Management<span> - Lapland University of Applied Sciences</span></h5>
                     <img src="img/lapinamk.webp" alt="Lapland University of Applied Sciences - Jarno Kiimala - Industrial Management - Tuotantotalous">
                     <p>
-                        Bachelor of Engineering (B.Eng). Subject of thesis: Marketing Research of Steel Abrasive Blast
-                        Room and Powder Coat Booth commissioned by Tornion KaMa-Palvelut Oy.
+                        Bachelor of Engineering (B.Eng). Subject of Thesis: Marketing Research of Steel Abrasive Blast
+                        Room and Powder Coat Booth Commissioned by Tornion KaMa-Palvelut Oy.
                     </p>
                 </div>
 
@@ -245,35 +245,35 @@
                     <h5>3D CAD Modeling<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
-                        Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
+                        Design & Product Development | 3D Models and 2D Drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
-                </div> <br><br><br><br>
+                </div> 
                        
 
-                <!--<div class="timeline-item">
+                <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                      <p class="tl-duration">2021</p> 
+                      <!--<p class="tl-duration">2021</p> -->
                     <h5>MyCashflow e-Commerce Design & Architecture<span> - Faktia Ltd</span></h5>
                     <img src="img/myCashFlowI.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO, Configuration and Administration.
                     </p>
-                </div><br><br><br><br>-->
+                </div>
 
-                <!--<div class="timeline-item">
+                <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                      <p class="tl-duration">2021</p> 
+                      <!--<p class="tl-duration">2021</p> -->
                     <h5>WordPress & WooCommerce Design & Architecture<span> - Avartum-Institute Ltd</span></h5>
                     <img src="img/woocommerce.webp" alt="Faktia Ltd - Jarno Kiimala - WordPress & WooCommerce">
                     <p>
                         WordPress & WooCommerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO, Configuration and Administration.
                     </p><br><br><br><br>
-                </div> -->     
+                </div> 
             
             </div>
         </section>
