--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <div class="text" id="animatedText">Continuous Improvement</div>
                       </div>
                     
-                <p> 
-                    Improving efficiency and the quality of work.
-                </p>
+                    <div class="textHead">
+                    "Improving Efficiency and The Quality of Work."
+                    </div>
 
             </div>
         </div>
