--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p style="color:var(--color-secondary)">
-                                    <span>karl.von.ajomiina&commat;gmail.com</span>
+                                    <span>karl.von.ajomiina&commat;proton.me</span>
                                 </p>
                             </div>
                             <div class="contact-item">
