--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="right-header">
                 
                 <h1 class="name">
-                     I am <span>Karl von Ajomiina. </span>Fake Doctor & Snake Oil Salesman.</span></h1><br>
+                     I am <span>Karl von Ditchmine. </span>Fake Doctor & Snake Oil Salesman.</span></h1><br>
                     
                      <div class="scene">
                         <div class="text" id="animatedText">Continuous Improvement</div>
