--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image" id="image">
-                    <img src="img/kiimala.webp" alt="Jarno Kiimala | Software Developer | Knowledge Management">
+                    <img src="img/kiimala.webp" alt="Karl von Ditchmine | Fake Doctor | Snake Oil Salesman">
                 </div>
             </div>
             <div class="right-header">
