--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Karl von Ajomiina | International Relations Specialist | Engineering and Management</title>
+    <title>Karl von Ditchmine | Fake Doctor | Snake Oil Salesman</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
