--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
-                    <h5>Python Programming MOOC 1-7 + 8-14<span> - The University of Helsinki</span></h5>
+                    <h5>Python Programming MOOC 1-7 & 8-14<span> - The University of Helsinki</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Programming, 5cr + Advanced Course
