--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                       <!--<p class="tl-duration">2017</p>  -->
-                    <h5>Industrial Surface Finishing<span> - Centria Research and Development</span></h5>
+                    <h5>Industrial Surface Finishing Operations<span> - Centria Research and Development</span></h5>
                     <img src="img/centria.webp" alt="Centria Research and Development - Jarno Kiimala - Industrial Surface Finishing">
                     <p>
                         Quality & Testing | Service & Maintenance | Production Process & Safety.
@@ -219,11 +219,11 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
-                    <h5>Python Programming MOOC 1-7 & 8-14<span> - The University of Helsinki</span></h5>
+                    <h5>Python Programming<span> - The University of Helsinki | The Department of Computer Science</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Programming, 5cr + Advanced Course
-                        in Programming, 5 cr | The Department of Computer Science.
+                        in Programming, 5 cr | MOOC 1-7 & 8-14.
                     </p>
                 </div>
 
