--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/pythonlogo.webp" alt="python">
                         <div class="carousel-item" role="listitem"><img src="img/reactlogo.webp" alt="react">
                         <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
+                        <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
@@ -110,7 +111,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div>
                 </div></div>
 
@@ -204,7 +205,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                      <p class="tl-duration">2007 - 2008</p> 
+                      
                     <h5>Media Engineering and Technology<span> - Centria University of Applied Sciences</span></h5>
                     <img src="img/centria.webp" alt="Centria University of Applied Sciences - Jarno Kiimala - Media Tech Engineering">
                     <p>
@@ -222,8 +223,8 @@
                     <h5>Python Programming<span> - The University of Helsinki | The Department of Computer Science</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
-                        Introduction to Programming, 5cr + Advanced Course
-                        in Programming, 5 cr | MOOC 1-7 & 8-14.
+                        MOOC 1-7 & 8-14 | Introduction to Programming (5cr) + Advanced Course
+                        in Programming (5cr).
                     </p>
                 </div>
 
