--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>
                       <!--<p class="tl-duration">2017</p>  -->
                     <h5>Industrial Surface Finishing Operations<span> - Centria Research and Development</span></h5>
-                    <img src="img/centria.webp" alt="Centria Research and Development - Jarno Kiimala - Industrial Surface Finishing">
+                    <img src="img/centriard.webp" alt="Centria Research and Development - Jarno Kiimala - Industrial Surface Finishing">
                     <p>
                         Quality & Testing | Service & Maintenance | Production Process & Safety.
                     </p>
