--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2013 - 2017</p> -->
-                    <h5>Industrial Engineering and Management<span> - Lapland University of Applied Sciences</span></h5>
+                    <h5>Industrial Engineering and Management<span> - Lapland University of Appl. Sci.</span></h5>
                     <img src="img/lapinamk.webp" alt="Lapland University of Applied Sciences - Jarno Kiimala - Industrial Management - Tuotantotalous">
                     <p>
                         Bachelor of Engineering (B.Eng). Subject of Thesis: Marketing Research of Steel Abrasive Blast
@@ -247,7 +247,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!--  <p class="tl-duration">2018</p> -->
-                    <h5>3D CAD Modeling<span> - The Finnish Institute for Enterprise Management</span></h5>
+                    <h5>3D CAD Design & Modeling<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <img src="img/3DCAD.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks & Inventor Pro">
                     <p>
                         Design & Product Development | 3D Models and 2D Drawings of Complex Parts and Assemblies
@@ -261,7 +261,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                       <!--<p class="tl-duration">2021</p> -->
-                    <h5>MyCashflow e-Commerce Design & Architecture<span> - Faktia Ltd</span></h5>
+                    <h5>MyCashflow e-Commerce Website Design & Architecture<span> - Faktia Ltd</span></h5>
                     <img src="img/myCashFlowI.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO, Configuration and Administration.
