--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <div class="blog-text">
                             <a href="https://www.wisc.edu/" target="_blank">
                             <h4>
-                                The University of Wisconsin - Madison
+                                The University of Wisconsin Madison
                             </h4></a>
                             <p>
                                 The Wisconsin Project | Madison, WI, U.S.A.
@@ -373,7 +373,7 @@
                         <img src="img/arc.webp" alt="Jarno Kiimala - Arktista Vimmaa Festivaali">
                         <div class="blog-text">
                             <h4>
-                                <a>Arctic Design Week</a>
+                                Arctic Design Week
                             </h4>
                             <p>
                                 Lönnrot Project - 1000 Tales from Finland | Rovaniemi, Finland
@@ -494,7 +494,7 @@
                         <img src="img/skabmagovat.webp" alt="Jarno Kiimala - Skabmagovat">
                         <div class="blog-text">
                             <h4>
-                                <a>Skábmagovat Indigenous Film Festival</a>
+                                Skábmagovat Indigenous Film Festival
                             </h4>
                             <p>
                                 Aanaar - Inari, Finland
@@ -507,7 +507,7 @@
                         <img src="img/ijahisidja.webp" alt="Jarno Kiimala - Skabmagovat">
                         <div class="blog-text">
                             <h4>
-                                <a>Ijahis Idja Music Festival</a>
+                                Ijahis Idja Music Festival
                             </h4>
                             <p>
                                 Music Video Production Project(Shoot & Edit) | Aanaar - Inari, Finland
@@ -1030,7 +1030,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• LOOKING FOR NEW OPPORTUNITIES •</p>
+                            <p style="color:var(--color-secondary)">• LOOKING FOR NEW ADVENTURES •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
@@ -1048,7 +1048,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p style="color:var(--color-secondary)">
-                                    <span>jarno.kiimala&commat;gmail.com</span>
+                                    jarno.kiimala&commat;gmail.com
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -1057,7 +1057,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>Software Developer | B.Eng</span>
+                                    Software Developer | B.Eng
                                 </p>
                             </div>
                             
@@ -1067,7 +1067,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>Fin • Eng • Swe • Nor • Ger</span>
+                                    Fin • Eng • Swe • Nor • Ger
                                 </p>
                             </div>
                         </div>
