--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                         <img src="img/ssgentre.webp" alt="Jarno Kiimala - SSG Entre">
                         <div class="blog-text">
                             <h4>
-                                SSG Entre -  Work Environment and Safety Course
+                                SSG Entre -  Work Safety
                             </h4>
                             <p>
                                 SSG Standard Solutions Group AB, VALID:EXPIRED
