--- a/index.html
+++ b/index.html
@@ -164,19 +164,6 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                      <!--<p class="tl-duration">2017</p>  -->
-                    <h5>Further Technical Education to Highly Qualified<span> - Lappia Education Ltd</span></h5>
-                    <img src="img/lappia.webp" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
-                    <p>
-                        Continuing Professional Technical Education to Highly Qualified Individuals Tailored
-                        to Meet the Needs of the Swedish and Norwegian Labor Markets.
-                    </p>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
                      <!--<p class="tl-duration">2024</p> -->
                     <h5>The LAI Lean Academy<span> - The Massachusetts Institute of Technology (MIT)</span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
@@ -184,6 +171,8 @@
                         Introduction to Lean Six Sigma Methods.
                     </p>
                 </div>
+
+                                
 
                 <!--<div class="timeline-item">
                     <div class="tl-icon">
@@ -250,7 +239,18 @@
                     </p>
                 </div>
 
-                              
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                      <!--<p class="tl-duration">2017</p>  -->
+                    <h5>Further Technical Training to Highly Educated<span> - Lappia Education Ltd</span></h5>
+                    <img src="img/lappia.webp" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
+                    <p>
+                        Continuing Professional Technical Education to Highly Qualified Individuals Tailored
+                        to Meet the Needs of the Swedish and Norwegian Labor Markets.
+                    </p>
+                </div>       
 
                  <div class="timeline-item">
                     <div class="tl-icon">
