--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
-                                Industrial Production Process Operations, Preventive Maintenance (PM) | Raamsdonksveer, The Netherlands
+                                Industrial Production Process Operations | Raamsdonksveer, The Netherlands
                             </p>
                             
                         </div>
@@ -396,10 +396,10 @@
                         <img src="img/eduskunta.webp" alt="Jarno Kiimala - Eduskunta">
                         <div class="blog-text">
                             <h4>
-                                The Committee for the Future, Parliament of Finland
+                                The Committee for the Future
                             </h4>
                             <p>
-                                The Wisconsin Project | Helsinki, Finland
+                                The Wisconsin Project | Helsinki | The Parliament of Finland
                             </p>
                         </div>
                     </div>
