--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                 The Committee for the Future
                             </h4>
                             <p>
-                                The Wisconsin Project | Helsinki | The Parliament of Finland
+                                The Wisconsin Project, Helsinki - Madison | The Parliament of Finland
                             </p>
                         </div>
                     </div>
