--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Global - Online - EU Citizen
+                                    Finland • Global • Online • EU Citizen
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -1065,7 +1065,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    Fin • Eng • Swe • Nor • Ger
+                                    Fin • Eng • Swe • Nor • Ger • Spa
                                 </p>
                             </div>
                         </div>
