--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• LOOKING FOR NEW ADVENTURES •</p>
+                            <p style="color:var(--color-secondary)">• I AM READY FOR NEW CHALLENGES •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
