--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image" id="image">
-                    <img src="img/python.jpg" alt="Jarno Kiimala | Knowledge Management and Leadership">
+                    <img src="img/coder.webp" alt="Jarno Kiimala | Knowledge Management and Leadership">
                 </div>
             </div>
             <div class="right-header">
