--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="right-header">
                 
                 <h1 class="name">
-                     I am <span>Jarno Kiimala. </span>Web Developer & Production Engineer.</span></h1><br>
+                     I am <span>Jarno Kiimala. </span>Web Developer & Engineer.</span></h1><br>
                     
                      <div class="scene">
                         <div class="text" id="animatedText">Continuous Improvement</div>
