--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    Software Developer | B.Eng (Industrial Engineering)
+                                    Software Developer | B.Eng (Industrial Management)
                                 </p>
                             </div>
                             
