--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,9 @@
                             <a href="https://bsky.app/profile/jkiimala.bsky.social" target="_blank">
                                 <i class="fa-brands fa-bluesky"></i>
                             </a>
+                            <a href="https://x.com/JKiimala" target="_blank">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
                             <!--
                             <a href="https://www.instagram.com/jarnokiimala" target="_blank">
                                 <i class="fab fa-instagram"></i> 
