--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                               
                         </div>
                     </div> 
-                </div>
+                </div></div>
 
                 
                 </div>
