--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                     <h5>The LAI Lean Academy<span> - The Massachusetts Institute of Technology (MIT)</span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
-                        The fundamental principles, practices and tools of Lean 
-                        Six Sigma methods that underlay modern organizational productivity approaches 
-                        applied in aerospace, automotive, health care, and other sectors.
+                        The Fundamental Principles, Practices and Tools of Lean 
+                        Six Sigma Methods That Underlay Modern Organizational Productivity Approaches 
+                        Applied in Aerospace, Automotive, Health Care, and Other Sectors.
                     </p>
                 </div>
 
