--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="right-header">
                 
                 <h1 class="name">
-                     I am <span>Jarno Kiimala. </span>Web Developer & Engineer.</span></h1><br>
+                     Making <span>small businesses </span>more PROFITABLE!</span></h1><br>
                     
                      <div class="scene">
                         <div class="text" id="animatedText">Continuous Improvement</div>
