--- a/index.html
+++ b/index.html
@@ -1022,9 +1022,9 @@
                 <div class="main-title">
 
                     
-                    <h2>Hire Me!<br><br><span><i class="fa fa-info-circle fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
+                    <h2>Hire Me!<br><br><span><i class="fa-solid fa-sack-dollar fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
                 </div>
-
+                
 
                 <div class="contact-content-con">
                     <div class="left-contact">
