--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     
             </div>
-             <div class="star-animation"></div>
+           <!--  <div class="star-animation"></div> -->
         </div>
     </header>
     <main>
