--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="right-header">
                 
                 <h1 class="name">
-                     Making <span>SME businesses </span>more PROFITABLE!</h1><br>
+                     Making <span>Small and Medium-sized Enterprises </span>more PROFITABLE!</h1><br>
                     
                      <div class="scene">
                         <div class="text" id="animatedText">Continuous Improvement</div>
