--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
+                        <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
                         <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="ai">
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventor">
@@ -113,7 +114,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div>
                 </div></div>
 
@@ -1166,11 +1167,8 @@
         <i class="fas fa-paint-brush"></i>
     </div>
     
-
-
     <script src="app.js"></script>
-
-    
+ 
 
     <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
