--- a/index.html
+++ b/index.html
@@ -109,12 +109,16 @@
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventor">
                         <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobe">
+                        <div class="carousel-item" role="listitem"><img src="img/AE.webp" alt="adobe">
+                        <div class="carousel-item" role="listitem"><img src="img/AI.webp" alt="adobe">
+                        <div class="carousel-item" role="listitem"><img src="img/PR.webp" alt="adobe">
+                        <div class="carousel-item" role="listitem"><img src="img/PS.webp" alt="adobe">
                         <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="adobe">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div>
                 </div></div>
 
