--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                         <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
-                        <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="github">
+                        <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
                         <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
+                        <div class="carousel-item" role="listitem"><img src="img/mongodb.webp" alt="mongoDB">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
@@ -119,7 +120,7 @@
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
                         <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
                         <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div>
                 </div></div>
 
