--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Web Designer, Front-End, Knowledge Management, Engineer">
+    <meta name="description" content="Improving Efficiency and The Quality of Work - Front-End Development - 3D Modeling - Industrial Engineering">
     <meta name="keywords" content="JavaScript, Python, Bootstrap 5, Tailwind CSS, 
     React, digimarkkinointi, wordpress, ohjelmointi, software developer, koodari, insinööri, tuotantotalous">
     <meta name="author" content="Jarno Kiimala">
