--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Improving Efficiency and The Quality of Work - Front-End Development - 3D Modeling - Industrial Engineering">
+    <meta name="description" content="Front-End Development - 3D Modeling - Industrial Engineering">
     <meta name="keywords" content="JavaScript, Python, Bootstrap 5, Tailwind CSS, 
     React, digimarkkinointi, wordpress, ohjelmointi, software developer, koodari, insinööri, tuotantotalous">
     <meta name="author" content="Jarno Kiimala">
@@ -316,7 +316,7 @@
                                 LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
-                                Industrial Production Process Operations | Raamsdonksveer, The Netherlands
+                                Industrial Plastic Production Process Operations | Raamsdonksveer, The Netherlands
                             </p>
                             
                         </div>
@@ -329,7 +329,7 @@
                                 IMS/Acer
                             </h4>
                             <p>
-                                Testing Process Operations of IBM & Acer Products | Tilburg, The Netherlands
+                                Electronics Testing Process Operations of IBM & Acer Products | Tilburg, The Netherlands
                             </p>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Several Remote Team Projects - Adding Value to Customers | Global Online
+                                Several Remote Team Projects - Adding Value to Customers, Product & Service Design | Global Online
                             </p>
                         </div>
                     </div>
@@ -470,7 +470,7 @@
                                 Arctic Design Week
                             </h4></a>
                             <p>
-                                Lönnrot Project - 1000 Tales from Finland | Rovaniemi, Finland
+                                Lönnrot Project - 1000 Tales from Finland - Shortfilm about yakutian man living by the Lake Inari | Rovaniemi, Finland
                             </p>
                         </div>
                     </div>
