--- a/index.html
+++ b/index.html
@@ -745,6 +745,21 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/cart.webp" alt="Ostoskärry - Jarno Kiimala - App">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Shopping Cart App</h3>
+                        <div class="icons">
+                            <a href="https://ostokset.netlify.app/" id="Shopping Cart" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/jackpot.webp" alt="Captain Jackpot - Jarno Kiimala - JavaScript Game">
 
                     </div>
