--- a/index.html
+++ b/index.html
@@ -1054,9 +1054,9 @@
 
                 <div class="contact-content-con">
                     <div class="left-contact">
-                        <h4>Get Connected!</h4>
+                        <h4>Wanna collaborate?</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• YOUR PARTNER IN WEALTH BUILDING •</p>
+                            <p style="color:var(--color-secondary)">• Let's create something AMAZING together •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
