--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="left-header">
                 
                 <div class="image" id="image">
-                    <img src="img/lean.png" id="main-image" alt="Jarno Kiimala | Knowledge Management and Leadership">
+                    <img src="img/Lean1.png" id="main-image" alt="Jarno Kiimala | Knowledge Management and Leadership">
                 </div>
             </div>
             <div class="right-header">
